tests/parse_print/issues/361/2/stderr.expected
Error:
    tests/parse_print/issues/361/2/361_2.essence:2:37:
unexpected j
expecting comma, end of input, operator, rest of statement, or statement
    find x : int(1..2) such that forAll j in int(1..2) . x <= j
                                        ^